--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
 
             </div>
-            <div id="page4" data-scroll data-scroll-speed="-2.5">
+            <div id="page4">
                 <div id="page4-content">
                     <h1>About Obys</h1>
                     <div class="underline">
